tests/ui/privacy/pub-priv-dep/reexport_from_priv.stderr
error: struct `ReexportedShared` from private dependency 'shared' is re-exported
  --> $DIR/reexport_from_priv.rs:11:9
   |
LL | pub use reexport::Shared as ReexportedShared;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `shared` is an indirect dependency reached through the private direct dependency `reexport`
   = help: consider marking `reexport` public if exposing this item is intended
note: the lint level is defined here
  --> $DIR/reexport_from_priv.rs:7:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Shared` from private dependency 'shared' in public interface
  --> $DIR/reexport_from_priv.rs:14:1
   |
LL | pub fn leaks_priv() -> reexport::Shared {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `shared` is an indirect dependency reached through the private direct dependency `reexport`
   = help: consider marking `reexport` public if exposing this item is intended

error: aborting due to 2 previous errors

